--- a/lecture1.html
+++ b/lecture1.html
@@ -398,8 +398,10 @@
 <li class="fragment">Object-Oriented Programming이란?</li>
 <li class="fragment">프로그래밍 3대 paradigm</li>
 <li class="fragment">객체란 무엇인가?</li>
-<li class="fragment">oop의 핵심 개념 1 : class</li>
-<li class="fragment">oop의 핵심 개념 2 : Constructor</li>
+<li class="fragment">oop의 핵심 개념 1 : Class</li>
+<li class="fragment">oop의 핵심 개념 2 : Instance</li>
+<li class="fragment">oop의 핵심 개념 3 : Method</li>
+<li class="fragment">oop의 핵심 개념 4 : Constructor</li>
 </ul>
 </div>
 </section>
@@ -654,8 +656,8 @@
 </div>
 </div>
 </section>
-<section id="python의-class-구조-2-constructor" class="slide level2">
-<h2>python의 class 구조 2 : Constructor</h2>
+<section id="python의-class-구조-4-constructor" class="slide level2">
+<h2>python의 class 구조 4 : Constructor</h2>
 <p><br></p>
 <div class="fragment fade-up">
 <p>constructor : class에 초기 값을 설정</p>
